--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "OmniBot",
   "version": "0.1.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "./dist/index.js",
   "private": true,
   "scripts": {
     "build": "tsc",
