--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "node ./bootstrap/validate-env-vars.mjs && node --loader ts-node/esm src/index.ts",
+    "start": "node ./bootstrap/validate-env-vars.mjs && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky"
+    "prepare": "husky || true"
   },
   "keywords": [],
   "author": "",
