--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,7 @@
 {
   "**/*.{js,mjs,cjs,ts,mts,cts}": [
     "prettier --check",
+    "oxlint --max-warnings 0",
     "eslint --max-warnings 0"
   ],
   "**/*.{md,json}": "prettier --check"
