chore: replace eslint with oxlint
It will really speedup pre-commit linting.

Note: We just replaced eslint with oxlint & its
default configuration. We do not have used the
oxlint-migrate tool to migrate eslint
configuration to oxlint.

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,8 +1,7 @@
 {
   "**/*.{js,mjs,cjs,ts,mts,cts}": [
     "prettier --check",
-    "oxlint --max-warnings 0",
-    "eslint --max-warnings 0"
+    "oxlint --deny-warnings"
   ],
   "**/*.{md,json}": "prettier --check"
 }
