--- a/package.json
+++ b/package.json
@@ -22,22 +22,14 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.33.0",
     "@types/node": "^22.17.2",
     "dotenv": "^17.2.1",
-    "eslint": "^9.33.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-oxlint": "^1.12.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "jiti": "^2.5.1",
     "lint-staged": "^16.1.5",
     "oxlint": "^1.12.0",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.1"
+    "typescript": "^5.9.2"
   }
 }
