--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@prisma/client": "6.14.0",
     "discord.js": "^14.21.0",
-    "prisma": "^6.14.0"
+    "prisma": "^6.14.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
