ci: fix potential hang caused by prisma survey
add --no-hints to every prisma command to avoid
having this kind of survey.

```
How likely are you to recommend Prisma?

Enter a number from 0 to 10 (0 = not at all, 10 = extremely likely) and press
Enter — or leave blank to skip and not be asked again.

This prompt closes in 30s and can be suppressed with --no-hints. Learn more: https://pris.ly/why-nps
```

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky || true",
     "prisma:consolidate": "node --loader ts-node/esm scripts/consolidate-schema.ts",
-    "prisma:generate": "pnpm prisma:consolidate && prisma generate",
-    "prisma:migrate": "pnpm prisma:consolidate && prisma migrate dev",
-    "prisma:studio": "pnpm prisma:consolidate && prisma studio"
+    "prisma:generate": "pnpm prisma:consolidate && prisma generate --no-hints",
+    "prisma:migrate": "pnpm prisma:consolidate && prisma migrate dev --no-hints",
+    "prisma:studio": "pnpm prisma:consolidate && prisma studio --no-hints"
   },
   "keywords": [],
   "author": "",
