ci: no need to generate prisma client for linter

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,4 @@ jobs:
       - name: Check code format
         run: pnpm exec prettier --check .
       - name: Run linter
-        run: |
-          echo "Generating Prisma Client is required for linting because else it fails with 'error TS2307: Cannot find module '../generated/prisma/client.js' or its corresponding type declarations.'"
-          pnpm prisma:generate
-          pnpm exec oxlint --deny-warnings
+        run: pnpm exec oxlint --deny-warnings
