feat: enhance configuration handling and add service
- Enhance greatly how config is handled with better type names and readability
- Add a table to store all config information
- Add a service to retrieve, edit and reset the configuration from the database

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepare": "husky || true",
     "prisma:consolidate": "node --loader ts-node/esm scripts/consolidate-schema.ts",
     "prisma:generate": "pnpm prisma:consolidate && prisma generate --no-hints",
-    "prisma:migrate": "pnpm prisma:consolidate && prisma migrate dev --no-hints",
+    "prisma:migrate": "pnpm prisma:consolidate && prisma migrate dev",
     "prisma:studio": "pnpm prisma:consolidate && prisma studio --no-hints"
   },
   "keywords": [],
