chore(prettier): make it run faster
# Before

hyperfine --warmup 3 --runs 3 'pnpm exec prettier --check .'
Benchmark 1: pnpm exec prettier --check .
  Time (mean ± σ):     570.3 ms ±   1.9 ms    [User: 992.2 ms, System: 57.0 ms]
  Range (min … max):   568.4 ms … 572.2 ms    3 runs

# After

hyperfine --warmup 3 --runs 3 'pnpm exec prettier --experimental-cli --check .'
Benchmark 1: pnpm exec prettier --experimental-cli --check .
  Time (mean ± σ):     390.4 ms ±   3.7 ms    [User: 1529.4 ms, System: 138.2 ms]
  Range (min … max):   386.2 ms … 393.3 ms    3 runs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,6 @@ jobs:
           pnpm install --frozen-lockfile
           pnpm build
       - name: Check code format
-        run: pnpm exec prettier --check .
+        run: pnpm exec prettier --experimental-cli --check .
       - name: Run linter
         run: pnpm exec oxlint --deny-warnings
