--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,8 +1,8 @@
 {
   "**/*.{js,mjs,cjs,ts,mts,cts}": [
-    "prettier --check",
+    "prettier --experimental-cli --check",
     "oxlint --deny-warnings"
   ],
-  "**/*.{md,json}": "prettier --check",
+  "**/*.{md,json}": "prettier --experimental-cli --check",
   "renovate.json": "pnpm --package=renovate dlx renovate-config-validator --strict"
 }
