--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "private": true,
   "scripts": {
     "build": "pnpm prisma:generate && tsc",
-    "dev": "node ./bootstrap/validate-env-vars.mjs && node --loader ts-node/esm src/index.ts",
+    "dev": "node ./bootstrap/validate-env-vars.mjs && tsx src/index.ts",
     "start": "node ./bootstrap/validate-env-vars.mjs && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky || true",
-    "prisma:consolidate": "node --loader ts-node/esm scripts/consolidate-schema.ts",
+    "prisma:consolidate": "tsx scripts/consolidate-schema.ts",
     "prisma:generate": "pnpm prisma:consolidate && prisma generate --no-hints",
     "prisma:migrate": "pnpm prisma:consolidate && prisma migrate dev --no-hints",
     "prisma:studio": "pnpm prisma:consolidate && prisma studio --no-hints"
@@ -37,7 +37,7 @@
     "oxlint": "^1.12.0",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
 }
