chore: add format command

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node ./bootstrap/validate-env-vars.mjs && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky || true",
+    "format": "prettier . --write --ignore-unknown && oxlint --fix --fix-suggestions",
     "prisma:consolidate": "tsx scripts/consolidate-schema.ts",
     "prisma:generate": "pnpm prisma:consolidate && prisma generate --no-hints",
     "prisma:migrate": "pnpm prisma:consolidate && prisma migrate dev --no-hints",
