--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier . --write --ignore-unknown && oxlint --fix --fix-suggestions",
     "prisma:consolidate": "tsx scripts/consolidate-schema.ts",
     "prisma:generate": "pnpm prisma:consolidate && prisma generate --no-hints",
-    "prisma:migrate": "pnpm prisma:consolidate && prisma migrate dev --no-hints",
+    "prisma:migrate": "pnpm prisma:consolidate && prisma migrate dev",
     "prisma:studio": "pnpm prisma:consolidate && prisma studio --no-hints"
   },
   "keywords": [],
